--- a/support.html
+++ b/support.html
@@ -6,14 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The goal of this project is to provide a standard template for Jenkins jobs for PHP projects." />
   <meta name="author" content="Sebastian Bergmann" />
-  <title>Template for Jenkins Jobs for PHP Projects: Support</title>
+  <title>PHP  Based  projects with Jenkins  on steroids</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:400,700" rel="stylesheet" type="text/css">
-  <!--[if lt IE 9]>
-  <script src="js/html5shiv.js"></script>
-  <script src="js/respond.min.js"></script>
-  <![endif]-->
  </head>
  <body>
   <div id="wrap">
@@ -45,12 +41,8 @@
      <h1>Support</h1>
     </div>
     <h2>Issues</h2>
-    <p><a href="https://github.com/sebastianbergmann/php-jenkins-template/issues">Issues are tracked on GitHub</a>.</p>
-    <h2>Internet Relay Chat (IRC)</h2>
-    <p>The <a href="irc://irc.freenode.net/#jenkins-php">#jenkins-php</a> channel on the <a href="http://freenode.net">FreeNode</a> IRC network can be used to discuss all issues related to Jenkins and PHP.</p>
-    <h2>Professional Services</h2>
-    <p><a href="http://thePHP.cc/" title="The PHP Consulting Company (thePHP.cc)">thePHP.cc</a> offers consulting and training that set you on a path to create, maintain and extend sustainable software of high quality with PHP and leverage Jenkins to monitor the various aspects of software quality.</p>     
-   </div>
+    <p><a href="https://github.com/pdam/php-jenkins-template/issues">Issues are tracked on GitHub</a>.</p>
+  </div>
   </div>
   <div id="footer">
    <div class="container">
