--- a/integration.html
+++ b/integration.html
@@ -2,6 +2,10 @@
 <html lang="en">
  <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The goal of this project is to provide a standard template for Jenkins jobs for PHP projects." />
+  <meta name="author" content="Sebastian Bergmann" />
   <title>Template for Jenkins Jobs for PHP Projects: Integration</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -73,9 +77,7 @@ chown -R jenkins:jenkins php-template/</pre></li>
    </div>
   </div>
   <div id="footer">
-   <div class="container">
-    <p class="text-muted">The "<span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type"><a xmlns:cc="http://creativecommons.org/ns#" href="http://jenkins-php.org/" property="cc:attributionName" rel="cc:attributionURL">Template for Jenkins Jobs for PHP Projects</a></span>" by <a href="http://sebastian-bergmann.de/">Sebastian Bergmann</a> and his contributors is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
-   </div>
+   <div class="container"></div>
   </div>
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
