--- a/support.html
+++ b/support.html
@@ -4,8 +4,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="The goal of this project is to provide a standard template for Jenkins jobs for PHP projects." />
-  <meta name="author" content="Sebastian Bergmann" />
   <title>PHP  Based  projects with Jenkins  on steroids</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -41,7 +39,7 @@
      <h1>Support</h1>
     </div>
     <h2>Issues</h2>
-    <p><a href="https://github.com/pdam/jenkins-hpi/issues">Issues are tracked on GitHub</a>.</p>
+    <p><a href="https://github.com/pdam/jenkins-php/issues">Issues are tracked on GitHub</a>.</p>
   </div>
   </div>
   <div id="footer">
@@ -56,7 +54,7 @@
   _paq.push(["enableLinkTracking"]);
 
   (function() {
-    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://piwik.sebastian-bergmann.de/";
+    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://piwik.github.io/";
     _paq.push(["setTrackerUrl", u+"piwik.php"]);
     _paq.push(["setSiteId", "6"]);
     var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
