--- a/automation.html
+++ b/automation.html
@@ -35,7 +35,7 @@
        <li class="active"><a href="automation.html">Automation</a></li>
        <li><a href="configuration.html">Configuration</a></li>
        <li><a href="integration.html">Integration</a></li>
-       <li><a href="support.html">Support</a></li>
+
       </ul>
      </div>
     </div>
@@ -210,7 +210,7 @@
   _paq.push(["enableLinkTracking"]);
 
   (function() {
-    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://piwik.sebastian-bergmann.de/";
+    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://piwik.github.io/";
     _paq.push(["setTrackerUrl", u+"piwik.php"]);
     _paq.push(["setSiteId", "6"]);
     var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
