--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">Template for Jenkins Jobs for PHP Projects</a>
+      <a class="navbar-brand" href="selenium.html">Template for Jenkins Jobs for Selenium Projects</a>
      </div>
      <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
