--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
      <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
        <li class="active"><a href="index.html">Home</a></li>
-       <li><a href="installation.html">Installation</a></li>
-       <li><a href="automation.html">Automation</a></li>
-       <li><a href="configuration.html">Configuration</a></li>
-       <li><a href="integration.html">Integration</a></li>
+       <li><a href="selenium.html">Selenium-TestNG-Maven</a></li>
       
       </ul>
      </div>
@@ -46,19 +43,11 @@
    </div>
    <div class="container">
     <div class="page-header">
-     <h1>Template for Jenkins Jobs for PHP Projects</h1>
+     <h1>Template for Jenkins Jobs for  Projects</h1>
     </div>
-    <p class="lead">Most web applications are changed and adapted quite frequently and quickly. Their environment, for example the size and the behaviour of the user base, are constantly changing. What was sufficient yesterday can be insufficient today. Especially in a web environment it is important to monitor and continuously improve the internal quality not only when developing, but also when maintaining the software.</p>
-    <p class="lead"><a href="http://jenkins-ci.org/">Jenkins</a> is the leading <a href="http://en.wikipedia.org/wiki/Open_Source">open-source</a> <a href="http://martinfowler.com/articles/continuousIntegration.html">continuous integration</a> server. Thanks to its thriving plugin ecosystem, it supports building and testing virtually any project.</p>
-    <p class="lead"><strong>The goal of this project is to provide a standard template for Jenkins jobs for PHP projects.</strong></p>
-    <p class="lead">Simply follow these four steps to get started:</p>
-    <ol class="lead">
-     <li><a href="installation.html">Install the required Jenkins plugins and PHP tools</a></li>
-     <li><a href="automation.html">Orchestrate the PHP tools using Apache Ant</a></li>
-     <li><a href="configuration.html">Configure the PHP tools for use with Jenkins job template</a></li>
-     <li><a href="integration.html">Create a Jenkins job for your PHP project</a></li>
-    </ol>
-   </div>
+    <div class="page-header">
+     <h1>Template  for  Jenkins   jobs  to  run  maven TestNG Selenium  Tests  </h1>
+    </div>
   </div>
   <div id="footer">
    <div class="container">
