--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </div>
    </div>
    <div class="container">
-    <div class="page-header">
-     <h1>Template for Jenkins Jobs for  Projects</h1>
+    <div class="navbar-brand">
+     <h1>Template for Jenkins Jobs for  Projects  </h1>
     </div>
-    <div class="page-header">
+    <div class="navbar-brand">
      <h1>Template  for  Jenkins   jobs  to  run  maven TestNG Selenium  Tests  </h1>
     </div>
   </div>
