--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Template for Jenkins Jobs for PHP Projects</a>
+      <a class="navbar-brand" href="home.html">Template for Jenkins Jobs for PHP Projects</a>
       <a class="navbar-brand" href="selenium.html">Template for Jenkins Jobs for Selenium Projects</a>
      </div>
      <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-       <li class="active"><a href="index.html">Home</a></li>
+       <li class="active"><a href="home.html">Home</a></li>
        <li><a href="selenium.html">Selenium-TestNG-Maven</a></li>
       
       </ul>
