--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="home.html">Template for Jenkins Jobs for PHP Projects</a>
+     
       <a class="navbar-brand" href="selenium.html">Template for Jenkins Jobs for Selenium Projects</a>
      </div>
      <div class="collapse navbar-collapse">
@@ -43,7 +43,7 @@
    </div>
    <div class="container">
     <div class="navbar-brand">
-     <h1>Template for Jenkins Jobs for  Projects  </h1>
+     <h1> <a class="navbar-brand" href="home.html">Template for Jenkins Jobs for  Projects</a></h1>
     </div>
     <div class="navbar-brand">
      <h1>Template  for  Jenkins   jobs  to  run  maven TestNG Selenium  Tests  </h1>
