--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <h1> <a class="navbar-brand" href="home.html">Template for Jenkins Jobs for  Projects</a></h1>
     </div>
     <div class="navbar-brand">
-     <h1>Template  for  Jenkins   jobs  to  run  maven TestNG Selenium  Tests  </h1>
+     <h1><a class="navbar-brand" href="selenium.html">Template  for  Jenkins   jobs  to  run  maven TestNG Selenium  Tests</a> </h1>
     </div>
   </div>
   <div id="footer">
