--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The goal of this project is to provide a standard template for Jenkins jobs for PHP projects." />
-  <meta property="og:site_name" content="Template for Jenkins Jobs for PHP Projects" />
-  <meta property="og:title" content="Template for Jenkins Jobs for PHP Projects" />
+  <meta property="og:site_name" content="Template for Jenkins Jobs for Projects" />
+  <meta property="og:title" content="Template for Jenkins Jobs for Projects" />
   <meta property="og:type" content="website" />
   <link rel="canonical" href="http://jenkins-php.org/" />
-  <title>Template for Jenkins Jobs for PHP Projects</title>
+  <title>Template for Jenkins Jobs for Projects</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:400,700" rel="stylesheet" type="text/css">
@@ -24,7 +24,7 @@
     
    <div class="container">
     <div class="navbar-brand">
-     <h1> <a class="navbar-brand" href="php.html">Template for Jenkins Jobs for  Projects</a></h1>
+     <h1> <a class="navbar-brand" href="php.html">Template for Jenkins Jobs to    run   for PHP  based  Projects</a></h1>
     </div>
     <div class="navbar-brand">
      <h1><a class="navbar-brand" href="selenium.html">Template  for  Jenkins   jobs  to  run  maven TestNG Selenium  Tests</a> </h1>
