--- a/automation.html
+++ b/automation.html
@@ -30,7 +30,8 @@
      </div>
      <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-       <li><a href="index.html">Home</a></li>
+       <li><a href="index.html">Back  to  Main</a></li>
+       <li><a href="php.html">Home</a></li>
        <li><a href="installation.html">Installation</a></li>
        <li class="active"><a href="automation.html">Automation</a></li>
        <li><a href="configuration.html">Configuration</a></li>
