--- a/selenium.html
+++ b/selenium.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The goal of this project is to provide a standard template for Jenkins jobs for PHP projects." />
-  <title>Template for Jenkins Jobs for PHP Projects: Automation</title>
+  <title>Template for Jenkins Jobs for Selenium  Projects</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/highlight.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
