--- a/selenium.html
+++ b/selenium.html
@@ -46,12 +46,8 @@
     <p class="lead">4. Configure the *Source Code Management* build step to check out a copy of the repository containing your Selenium tests.</p>
     <p class="lead">5. Modify the *SeleniumHQ htmlSuite Run* build step to match the location of your tests plans and to add any additional arguments</p>
     <ol class="lead">To use this template in Jenkins you must install the *Hudson Seleniumhq* plugin.
-
 The *X virtual framebuffer* package (xvfb)  must be installed on the Jenkins server.</p>
-     <li><a href="installation.html">Install the required Jenkins plugins and PHP tools</a></li>
-     <li><a href="automation.html">Orchestrate the PHP tools using Apache Ant</a></li>
-     <li><a href="configuration.html">Configure the PHP tools for use with Jenkins job template</a></li>
-     <li><a href="integration.html">Create a Jenkins job for your PHP project</a></li>
+     <li><a href="config.xml">Job config</a></li>
     </ol>
    </div>
   </div>
