--- a/selenium.html
+++ b/selenium.html
@@ -40,14 +40,14 @@
     <div class="page-header">
      <h1>A basic template for setting up Selenium jobs in Jenkins</h1>
     </div>
-     <p class="lead">1. Copy this directory to `/var/lib/jenkins/jobs/selenium-template`</p>
+    <p class="lead">1. Copy this directory to `/var/lib/jenkins/jobs/selenium-template`</p>
     <p class="lead">2. Create a new job and select *Copy existing job*, enter `selenium-template` in the *Copy from* field.</p>
     <p class="lead">3. Uncheck the *Disable Build* checkbox</p>
     <p class="lead">4. Configure the *Source Code Management* build step to check out a copy of the repository containing your Selenium tests.</p>
     <p class="lead">5. Modify the *SeleniumHQ htmlSuite Run* build step to match the location of your tests plans and to add any additional arguments</p>
-    <ol class="lead">To use this template in Jenkins you must install the *Hudson Seleniumhq* plugin.
-The *X virtual framebuffer* package (xvfb)  must be installed on the Jenkins server.</p>
-     <li><a href="config.xml">Job config</a></li>
+    <p class="lead">To use this template in Jenkins you must install the *Hudson Seleniumhq* plugin.</p>
+    <p class="lead">The *X virtual framebuffer* package (xvfb)  must be installed on the Jenkins server.</p>
+    <a href="config.xml">Job config</a>
     </ol>
    </div>
   </div>
