--- a/php.html
+++ b/php.html
@@ -28,7 +28,7 @@
      <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
        <li class="active"><a href="php.html">PHP</a></li>
-        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Back  to  Main</a></li>
        <li><a href="installation.html">Installation</a></li>
        <li><a href="automation.html">Automation</a></li>
        <li><a href="configuration.html">Configuration</a></li>
